--- a/Oblig3.Rmd
+++ b/Oblig3.Rmd
@@ -11,12 +11,49 @@ knitr::opts_chunk$set(echo = TRUE)
 
 whey
 
-```{r cars}
-summary(cars)
+```{r}
+#This gives a simple monte carlo integration#
+
+n<-10000; u<-rgamma(n,3.7,1);
+
+den<-1:(n)
+
+#The function to be integrated
+
+mci.ex <- function(x) x*log(x)
+
+par(mfrow=c(1,3))
+plot(function(x) mci.ex(x),xlim=c(0,2),ylim=c(-.7,.7),xlab="Function",ylab="")
+
+#The monte carlo sum
+hint<-mci.ex(u)
+
+hplot<-cumsum(hint)/den
+
+stdh<-sqrt( cumsum(hint^2)/den - (hplot)^2)
+
+par(new=F)
+
+hist(hint,xlab="Generated Values of Function",
+     freq=F,col="green",breaks=30,ylab="",main="")
+
+par(new=F)
+
+plot(hplot,type="l",col="blue",xlab="Mean and Standard Errors",
+     ylab="",xlim=c(1,n),ylim=c(1,7))
+
+par(new=T)
+
+plot(hplot+stdh/sqrt(den),type="l",col="green",xlab="",
+     ylab="",lty=2)
+
+par(new=T)
+
+plot(hplot-stdh/sqrt(den),type="l",col="red",
+     xlab="",ylab="",lty=2)
+
 ```
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
