--- a/Oblig3.Rmd
+++ b/Oblig3.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Oblig 3"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Isak Edvardsen"
 date: "3 april 2020"
 output: html_document
