--- a/Oblig3.Rmd
+++ b/Oblig3.Rmd
@@ -2,7 +2,9 @@
 title: "Oblig 3"
 author: "Isak Edvardsen"
 date: "3 april 2020"
-output: rmarkdown::github_document
+output: 
+  html_document:
+    keep_md: true
 
 ---
 
