--- a/Oblig3.Rmd
+++ b/Oblig3.Rmd
@@ -44,7 +44,8 @@ curve(dgamma(x,3.7,1), add=TRUE,col='red')
 
 
 
-```{r}
+```{r Monte carlo integration}
+
 # Monte carlo integration
 
 mci_int <- function(n) 
@@ -60,8 +61,6 @@ mci_int <- function(n)
   par(mfrow=c(1,3))
   
   curve(mci.ex(x),xlab="x",ylab="w(x)", from = 0, to = 2)
-  
-  #plot(function(x) mci.ex(x),xlim=c(0,2),ylim=c(-.7,.7),xlab="x",ylab="w(x)")
   
   # The monte carlo sum:
   
@@ -92,13 +91,49 @@ mci_int <- function(n)
   #     xlab="",ylab="",lty=2)
   return(1/n*sum(w_x))  
 }
-k = mci_int(10000)
 
-cat(k)
+mci_int(10000)
+
 
 
 ```
 
+
+```{r MCI approx} 
+
+# Computes the MCI approximation to E[Xlog(X)] for X~Gamma(3.7, 1).
+
+mci.gamma = function(n=10000)
+{	
+	x = rgamma(n,3.7, 1)
+	return(mean(x*log(x)))
+}
+
+mci.gamma()
+
+```
+
+
+
+```{r}
+
+riemann.gamma = function(n=10000, alfa = 3.7, lambda =1)
+{	
+	x = rgamma(n, alfa, lambda)
+	x = sort(x)
+	
+	f <- function(x,alfa = 3.7, lambda =1) lambda^alfa * 1/gamma(alfa)*exp(-lambda*alfa)*x^(alfa-1)
+	  
+	g <- function(x) x*log(x)
+	
+	k <- ( g(x[-n]) * f(x[-n]) * (x[-1]-x[-n]) ) 
+	
+	return(1/(n-1)*sum(k))
+}
+
+riemann.gamma()
+
+```
 
 
 
